Details
-
Bug
-
Status: Closed
-
Major
-
Resolution: Fixed
-
0.95
-
None
-
None
Description
<snippet file="rampart_out_handler.c" line="249">
ttl_str = RAMPART_ACTIONS_GET_TIME_TO_LIVE(actions, env);
ttl = atoi(RAMPART_ACTIONS_GET_TIME_TO_LIVE(actions, env));
if (ttl <= 0)
timestamp_token = rampart_timestamp_token_create(env);
</snippet>
before creating timestamp_token rampart checks for timeToLive property, when one need to "timestamp" without "timeToLive", rampart segfaults.