1. Fixed JIRA       AXIS2C-411 2. If user needs to send only the Created element in the Timestamp specify a negative value for timeToLive.